[package]
name = "pathkit"
version = "0.8.0"
edition = "2021"

authors = ["kiki-kanri"]
categories = ["filesystem"]
description = "Similar to the Path structure provided by python's pathlib, it provides various async/sync versions of file manipulation methods in addition to some of the std::Path built-in methods."
exclude = [
    ".gitignore",
    ".vscode/",
    "Makefile.toml",
    "modify-files-permissions.sh",
    "package.json",
    "release.sh",
]

keywords = ["filesystem", "path", "utils"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kiki-kanri/rust-pathkit"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
path-absolutize = "3.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.17.1"
