[package]
name = "pathkit"
version = "0.8.1"
edition = "2021"

authors = ["kiki-kanri"]
categories = ["filesystem"]
description = "Similar to the Path structure provided by python's pathlib, it provides various async/sync versions of file manipulation methods in addition to some of the std::Path built-in methods."
include = [
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

keywords = ["filesystem", "path", "utils"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kiki-kanri/rust-pathkit"

# Dependencies
[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
path-absolutize = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "rt"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }

# Features
[features]
all = []
full = ["all"]
