[package]
name = "pathkit"
version = "0.9.1"
edition = "2021"

authors = ["kiki-kanri"]
categories = ["filesystem"]
description = "Similar to the Path structure provided by python's pathlib, it provides various async/sync versions of file manipulation methods in addition to some of the std::Path built-in methods."
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords = [
  "filesystem",
  "path",
  "utils",
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/kiki-kanri/rs-pathkit"

# Dependencies
[dependencies]
anyhow = "1.0.100"
async-trait = { version = "0.1.89", optional = true }
path-absolutize = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "rt"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros"] }

# Features
[features]
## Define features
async-fs-ops = [
  "dep:async-trait",
  "dep:tokio",
]

## Default and alias
default = []
all = ["async-fs-ops"]
full = ["all"]
